--- a/i3.d/i3.config
+++ b/i3.d/i3.config
@@ -1,4 +1,4 @@
-#  _ _____   _                               _                       _
+#m  _ _____   _                               _                       _
 # (_)___ /  | | __ _ _   _  ___ _ __ ___  __| |  _ __ ___   ___   __| | ___  ___
 # | | |_ \  | |/ _` | | | |/ _ \ '__/ _ \/ _` | | '_ ` _ \ / _ \ / _` |/ _ \/ __|
 # | |___) | | | (_| | |_| |  __/ | |  __/ (_| | | | | | | | (_) | (_| |  __/\__ \
@@ -24,7 +24,7 @@ set $alt Mod1
 set $PYTHOMBIN="/home/hector/anaconda3/bin/"
 set $STATUSCMD="py3status"
 set $BARCONFIG "gvim ~/.config/i3status/config"
-set $BARFONT pango: Monoid 9
+set $BARFONT pango:Monoid 10
 set $BORDER_FAT 3
 set $BORDER_SKINNY 1
 set $CLICK "xdotool click --clearmodifiers 2"
@@ -33,23 +33,23 @@ set $DMENU "i3-dmenu-desktop --dmenu='rofi -dmenu -i -p Run: '"
 set $RELOADXRSC "xrdb -merge ~/.Xresources"
 set $SCREENSHOTCMD "scrot '%Y%m%d-%H%M%S.jpg' -e 'mv $f ~/Pictures/screenshots'"
 set $SHELLCMD "exec rxvt-unicode -e /usr/bin/zsh -c %s"
-set $URXVTERM "exec rxvt-unicode +sb -e /usr/bin/zsh -o login"
+set $URXVTERM "rxvt-unicode +sb -e /usr/bin/zsh -o login"
 set $VIMCONFIG "gvim ~/.zconf/vim.d/vimrc.*"
 set $XKILLCMD "xkill"
-set $XTERMCMD "exec uxterm /usr/bin/zsh -ls"
+set $XTERMCMD "uxterm /usr/bin/zsh -ls"
 set $XZOOMCMD "killall xzoom ; xzoom"
 set $XZOOMKILL "killall -9 xzoom"
-set $ZCONFIG "gvim  ~/.zconf/zsh.d/z*
+set $ZCONFIG "gvim  ~/.zconf/zshenv ~/.zconf/zprofile ~/.zconf/zshrc ~/.zconf/zpreztorc ~/.zconf/zlogin ~/.zconf/zlogout"
 
 # General options
-font pango: Monoid 7
+font pango:Monoid 9
 floating_maximum_size 1024 x 768
 floating_minimum_size 20 x 20
 floating_modifier $mod
-focus_follows_mouse yes
+focus_follows_mouse no
 force_display_urgency_hint 2000 ms
 force_focus_wrapping yes
-# hide_edge_borders both
+hide_edge_borders both
 new_float  pixel $BORDER_FAT
 new_window pixel $BORDER_SKINNY
 no_focus [window_role="pop-up"]
@@ -58,28 +58,27 @@ workspace_auto_back_and_forth yes
 workspace_layout default
 
 # Window class specific options
-for_window [class="Google-chrome"] border none
+for_window [class="Google-chrome"]                  border none
 for_window [class="MotionPro"]     floating enable
-for_window [class="Shotwell"]      border none
+for_window [class="Shotwell"]                       border none
 for_window [class="^.creenkey"]    floating enable
-for_window [class="^Telegram"]     floating enable
-for_window [class="^URxvt"]        floating enable, border pixel $BORDER_FAT 
-for_window [class="^UXTerm"]       floating enable, border pixel $BORDER_FAT 
+for_window [class="^URxvt"]                         border pixel  $BORDER_FAT 
+for_window [class="^UXTerm"]                        border pixel  $BORDER_FAT 
 for_window [class="^Xkb"]          floating enable
-for_window [class="^Xkbv"]         floating enable, resize set 148 20 , border none, move position 660 0
-for_window [class="^Xmag"]         floating enable, resize set 400 400, border normal $BORDER_FAT, move position 635 32
-for_window [title="^xzoom"]        floating enable, resize set 400 400, border pixel $BORDER_FAT, move position 635 32
-for_window [class="^feh"]          floating enable, resize set 638 465, border pixel $BORDER_FAT, move position 635 32
-for_window [class="^vlc$"]         floating enable, resize set s40 480, border pixel $BORDER_SKINNY ,move absolute 0,0
-for_window [class="^xterm"]        floating enable, border pixel $BORDER_FAT 
-for_window [class="rofi"]          border pixel
+for_window [class="^Xkbv"]         floating enable, border none                 , resize set 148 20  , move position 660 0
+for_window [class="^Xmag"]         floating enable, border normal $BORDER_FAT   , resize set 400 400 , move position 635 32
+for_window [title="^xzoom"]        floating enable, border pixel  $BORDER_FAT   , resize set 400 400 , move position 635 32
+for_window [class="^feh"]          floating enable, border pixel  $BORDER_FAT   , resize set 638 465 , move position 635 32
+for_window [class="^vlc$"]         floating enable, border pixel  $BORDER_SKINNY, resize set s40 480 , move absolute 0, 0
+for_window [class="^xterm"]                         border pixel  $BORDER_FAT
+for_window [class="rofi"]                           border pixel
 for_window [title="^Event Tester"] floating enable
 for_window [title="^xfontsel"]     floating enable
 for_window [window_role="pop-up"]  floating enable, border pixel $BORDER_SKINNY
 # TeamViewer is not a team player :(
 for_window [class="^TeamViewer$"]  floating enable, border pixel $BORDER_FAT
 for_window [class="^TeamViewer$"   title="Computers & Contacts"] \
-                                   floating enable , resize set 240 480
+                                   floating enable, resize set 240 480
 
 #mode general {
 bindsym $mod+1 workspace 1
@@ -92,17 +91,10 @@ bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 
-#my mouse's button is broken :(
-set $CLK_Mid     xdotool click      2
-set $HLD_Mid     xdotool mousedown --clearmodifiers 2
-set $REL_Mid     xdotool mouseup   --clearmodifiers 2
-set $HLD_Ctl_Mid xdotool keydown   --clearmodifiers Control_L mousedown 2
-set $REL_Ctl_Mid xdotool keyup     --clearmodifiers Control_L mousedown 2
-
 #TODO: figure out why ths doesent work
 # bindsym           $mod+F3 exec xdotool mousedown     --clearmodifiers 2
 # bindsym --release $mod+F3 exec xdotool click     --clearmodifiers 2
-#CLICK AND HOLD pairs for mouse middle button
+# CLICK AND HOLD pairs for mouse middle button
 # bindsym           $alt+button1 exec $HLD_Mid
 # bindsym --release $alt+button1 exec $REL_Mid
 # #click and hold pair for mouse ctl-ckick middle button
@@ -110,45 +102,41 @@ set $REL_Ctl_Mid xdotool keyup     --clearmodifiers Control_L mousedown 2
 # bindsym --release $ctl+button1 exec $REL_Ctl_Mid
 
 #Frequently accessed keys
-bindsym $mod+a mode command
-bindsym $mod+b mode border
-bindsym $mod+f focus mode_toggle
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
-bindsym $mod+p exec $SCREENSHOTCMD
-bindsym $mod+s scratchpad show
-bindsym $mod+t exec $URXVTERM
-bindsym $mod+w workspace back_and_forth
-bindsym $mod+x exec $XTERMCMD
+bindsym $mod+     a      mode       command
+bindsym $mod+$hft+a      mode       command
+bindsym $mod+     b      border     toggle
+bindsym $mod+$hft+b      border     toggle
+bindsym $mod+     f      focus      mode_toggle
+bindsym $mod+$hft+f      floating   toggle
+bindsym $mod+     p      exec       $SCREENSHOTCMD
+bindsym $mod+$hft+p      exec       $SCREENSHOTCMD
+bindsym $mod+     s      scratchpad show
+bindsym $mod+$hft+s      move       scratchpad
+bindsym $mod+     t      exec       $URXVTERM
+bindsym $mod+$hft+t      exec       $URXVTERM
+bindsym $mod+     w      workspace  back_and_forth
+bindsym $mod+$hft+w      workspace  back_and_forth
+bindsym $mod+     x      exec       $XTERMCMD
+bindsym $mod+$hft+x      exec       $XTERMCMD
 
-# make it work with CAPS_LOCK
-bindsym $mod+$hft+a mode command
-bindsym $mod+$hft+b mode border
-bindsym $mod+$hft+f focus mode_toggle
-bindsym $mod+$hft+h focus left
-bindsym $mod+$hft+j focus down
-bindsym $mod+$hft+k focus up
-bindsym $mod+$hft+l focus right
-bindsym $mod+$hft+p exec $SCREENSHOTCMD
-bindsym $mod+$hft+s scratchpad show
-bindsym $mod+$hft+t exec $URXVTERM
-bindsym $mod+$hft+w workspace back_and_forth
-bindsym $mod+$hft+x exec $XTERMCMD
+bindsym $mod+     F11    layout     toggle split
+bindsym $mod+     F12    exec       $XKILLCMD
 
-bindsym --release $mod+F10 exec $CLICK
-bindsym $mod+F11 layout   toggle split
-bindsym $mod+F12 exec $XKILLCMD
+bindsym $mod+     Down   focus      down
+bindsym $mod+     Left   focus      left
+bindsym $mod+     Right  focus      right
+bindsym $mod+     Up     focus      up
 
-bindsym $mod+Left  focus left
-bindsym $mod+Down  focus down
-bindsym $mod+Up    focus up
-bindsym $mod+Right focus right
+bindsym $mod+$hft+Down   move       down
+bindsym $mod+$hft+Left   move       left
+bindsym $mod+$hft+Right  move       right
+bindsym $mod+$hft+Up     move       up
 
-bindsym $mod+Return    fullscreen toggle
-bindsym $mod+Tab       workspace next
-bindsym $mod+$hft+Tab  workspace prev
+bindsym $mod+     Tab    workspace  next
+bindsym $mod+$hft+Tab    workspace  prev
+
+bindsym $mod+     Return fullscreen toggle
+bindsym $mod+     Return fullscreen toggle
 #}
 
 # shifted modes
@@ -157,14 +145,11 @@ mode command {
     bindsym c      mode config
     bindsym colon  exec i3-input -P 'i3:'   , mode default
     bindsym comma  exec $DMENU              , mode default
-    bindsym e      exec $CONFIGFILE         , mode default
     bindsym f      mode changefocus
     bindsym l      mode layout
-    bindsym m      mode movement
-    bindsym plus   mode setplit
-    bindsym q      kill                     , mode default
+    bindsym $hft+q kill                     , mode default
+    bindsym      m mode mousekeys
     bindsym r      mode resize
-    bindsym s      move scratchpad          , mode default
     bindsym t      [class="^UXTerm|^UXTerm"] move scratchpad          , mode default
     bindsym $hft+t [class="^UXTerm|^UXTerm"] move workspace current   , mode default
     bindsym w      mode movetoworkspace
@@ -174,6 +159,37 @@ mode command {
     bindsym Return mode default
  }
 
+# mode mousekeys {
+
+#     bindsym           Up    focus up    xdotool
+
+#     bindsym           Down  focus down
+#     bindsym           Left  focus left
+#     bindsym           Right focus right
+
+#     bindsym      $hft+Up    focus up
+#     bindsym      $hft+Down  focus down
+#     bindsym      $hft+Left  focus left
+#     bindsym      $hft+Right focus right
+
+#     bindsym $mod     +Up    focus up
+#     bindsym $mod     +Down  focus down
+#     bindsym $mod     +Left  focus left
+#     bindsym $mod     +Right focus right
+
+#     bindsym $mod+$hft+Up    focus up
+#     bindsym $mod+$hft+Down  focus down
+#     bindsym $mod+$hft+Left  focus left
+#     bindsym $mod+$hft+Right focus right
+
+#     bindsym $mod+$hft+Space
+#     bindsym $mod+$hft+Space
+#     bindsym $mod+$hft+Space
+
+#     bindsym Escape mode default
+#     bindsym Return mode default
+# } 
+
 mode config {
     bindsym b      exec $BARCONFIG,  mode default
     bindsym c      exec $RELOADXRSC, mode default
@@ -182,7 +198,7 @@ mode config {
     bindsym r      reload,  mode default
     bindsym v      exec $VIMCONFIG,  mode default
     bindsym x      exec $XRESOURCES, mode default
-    bindsym z      exec $ZCONFIG,    mode default
+    bindsym z      exec $ZCONFIG, mode default
 
     bindsym Escape mode command
     bindsym Return mode default
@@ -204,7 +220,7 @@ mode border {
     bindsym Return mode default
 }
 
-mode movetoworkspace {
+ mode movetoworkspace {
     bindsym b        move container to workspace back_and_forth, mode default
     bindsym Tab      move container to workspace next, mode default
     bindsym $hft+Tab move container to workspace prev, mode default
@@ -229,63 +245,58 @@ mode movetoworkspace {
     bindsym Return mode default
  }
 
-mode changefocus {
+ mode changefocus {
+
     bindsym $hft+Up    focus parent, border pixel $BORDER_FAT, mode default
     bindsym $hft+Down  focus child,  border pixel $BORDER_FAT, mode default
-    bindsym $hft+j     focus child,  mode default
-    bindsym $hft+k     focus parent, mode default
 
-    bindsym Up    focus up
-    bindsym Down  focus down
-    bindsym Left  focus left
-    bindsym Right focus right
-    bindsym $hft+f focus mode_toggle
-    bindsym f      focus mode_toggle
+    bindsym Up         focus up
+    bindsym Down       focus down
+    bindsym Left       focus left
+    bindsym Right      focus right
 
-    bindsym h      focus left
-    bindsym j      focus down
-    bindsym k      focus up
-    bindsym l      focus right
+    bindsym $hft+f     focus_follows_mouse yes
+    bindsym f          focus_follows_mouse no
+
+    bindsym h          focus left
+    bindsym j          focus down
+    bindsym k          focus up
+    bindsym l          focus right
 
     bindsym Escape mode command
     bindsym Return mode default
  }
 
-mode layout {
+ mode layout {
     bindsym d     layout   default,      mode default
     bindsym h     layout   splith,       mode default
     bindsym s     layout   stacking,     mode default
     bindsym t     layout   tabbed,       mode default
     bindsym b     border   toggle
-    bindsym f     floating toggle,       mode default 
+    bindsym f     floating toggle,       mode default
+
     bindsym plus  layout   toggle split
     bindsym space layout   toggle all
     bindsym bar   split h, mode default,
     bindsym minus split v, mode default,
 
+    bindsym $hft+Up    focus parent
+    bindsym $hft+Down  focus child
+
+    bindsym      Up    focus up
+    bindsym      Down  focus down
+    bindsym      Left  focus left
+    bindsym      Right focus right
+
     bindsym h border pixel , title_format "[|] %title", split h, mode default
     bindsym v border pixel , title_format "[-] %title", split v, mode default
-    bindsym Escape mode command
-    bindsym Return mode default
- }
-
-mode movement {
-    bindsym Up    move up
-    bindsym Down  move down
-    bindsym Right move right
-    bindsym Left  move left
-
-    bindsym h move left
-    bindsym j move down
-    bindsym k move up
-    bindsym l move right
-    bindsym w move container to workspace back_and_forth
 
     bindsym Escape mode command
     bindsym Return mode default
  }
 
-mode resize {
+
+ mode resize {
     bindsym Up    resize grow   height   5 px or 1 ppt
     bindsym Down  resize grow   height   5 px or 1 ppt
     bindsym Right resize grow   width    5 px or 1 ppt
@@ -332,12 +343,6 @@ mode xzoom {
     bindsym Return mode default
 }
 
-mode setplit {
-
-    bindsym Escape mode command
-    bindsym Return mode default
-
-}
 
 bar {
       id bar-1
@@ -348,7 +353,6 @@ bar {
       tray_output primary
       status_command py3status
  }
-
 
 # bar {
 #       id bar-2
