--- a/i3.d/i3.config
+++ b/i3.d/i3.config
@@ -191,14 +191,14 @@ mode command {
 # } 
 
 mode config {
-    bindsym b      exec $BARCONFIG,  mode default
-    bindsym c      exec $RELOADXRSC, mode default
-    bindsym e      exec $CONFIGFILE, mode default
-    bindsym o      restart, mode default
-    bindsym r      reload,  mode default
-    bindsym v      exec $VIMCONFIG,  mode default
-    bindsym x      exec $XRESOURCES, mode default
-    bindsym z      exec $ZCONFIG, mode default
+    bindsym b      exec     $BARCONFIGV , mode default
+    bindsym c      exec     $RELOADXRSC , mode default
+    bindsym e      exec     $CONFIGFILE , mode default
+    bindsym o      restart              , mode default
+    bindsym r      reload               , mode default
+    bindsym v      exec     $VIMCONFIG  , mode default
+    bindsym x      exec     $XRESOURCES , mode default
+    bindsym z      exec     $ZCONFIG    , mode default
 
     bindsym Escape mode command
     bindsym Return mode default
@@ -221,25 +221,24 @@ mode border {
 }
 
  mode movetoworkspace {
-    bindsym b        move container to workspace back_and_forth, mode default
-    bindsym Tab      move container to workspace next, mode default
-    bindsym $hft+Tab move container to workspace prev, mode default
+    bindsym      b   move container to workspace back_and_forth, mode default
+    bindsym      Tab move container to workspace next , mode default
+    bindsym $hft+Tab move container to workspace prev , mode default
 
-    bindsym 1 move container to workspace 1, mode default
-    bindsym 2 move container to workspace 2, mode default
-    bindsym 3 move container to workspace 3, mode default
-    bindsym 4 move container to workspace 4, mode default
-    bindsym 5 move container to workspace 5, mode default
-    bindsym 6 move container to workspace 6, mode default
-    bindsym 7 move container to workspace 7, mode default
-    bindsym 8 move container to workspace 8, mode default
-    bindsym 9 move container to workspace 9, mode default
-    bindsym 0 move container to workspace 10, mode default
+    bindsym      1   move container to workspace 1    , mode default
+    bindsym      2   move container to workspace 2    , mode default
+    bindsym      3   move container to workspace 3    , mode default
+    bindsym      4   move container to workspace 4    , mode default
+    bindsym      5   move container to workspace 5    , mode default
+    bindsym      6   move container to workspace 6    , mode default
+    bindsym      7   move container to workspace 7    , mode default
+    bindsym      8   move container to workspace 8    , mode default
+    bindsym      9   move container to workspace 9    , mode default
 
-    bindsym Up    focus up
-    bindsym Down  focus down
-    bindsym Left  focus left
-    bindsym Right focus right
+    bindsym Up       focus up
+    bindsym Down     focus down
+    bindsym Left     focus left
+    bindsym Right    focus right
 
     bindsym Escape mode command
     bindsym Return mode default
