Updated i3 resize mode

--- a/i3.d/i3.config
+++ b/i3.d/i3.config
@@ -254,9 +254,6 @@ mode border {
     bindsym Left       focus left
     bindsym Right      focus right
 
-    bindsym $hft+f     focus_follows_mouse yes
-    bindsym f          focus_follows_mouse no
-
     bindsym h          focus left
     bindsym j          focus down
     bindsym k          focus up
@@ -294,33 +291,28 @@ mode border {
     bindsym Return mode default
  }
 
-
  mode resize {
-    bindsym Up    resize grow   height   5 px or 1 ppt
-    bindsym Down  resize grow   height   5 px or 1 ppt
-    bindsym Right resize grow   width    5 px or 1 ppt
-    bindsym Left  resize grow   width    5 px or 1 ppt
 
-    bindsym $hft+Up    resize shrink height   5 px or 1 ppt
-    bindsym $hft+Down  resize shrink height   5 px or 1 ppt
-    bindsym $hft+Right resize shrink width    5 px or 1 ppt
-    bindsym $hft+Left  resize shrink width    5 px or 1 ppt
+    bindsym           Down  resize shrink height   5 px or  1 ppt
+    bindsym           Left  resize grow   width    5 px or  1 ppt
+    bindsym           Right resize shrink width    5 px or  1 ppt
+    bindsym           Up    resize grow   height   5 px or  1 ppt
 
-    bindsym h resize grow   left   400 px or 45 ppt
-    bindsym j resize grow   down   400 px or 45 ppt
-    bindsym k resize grow   up     400 px or 45 ppt
-    bindsym l resize grow   right  400 px or 45 ppt
+    bindsym      $hft+Down  resize shrink height  50 px or 10 ppt
+    bindsym      $hft+Left  resize grow   width   50 px or 10 ppt
+    bindsym      $hft+Right resize shrink width   50 px or 10 ppt
+    bindsym      $hft+Up    resize grow   height  50 px or 10 ppt
 
-    bindsym $hft+h resize shrink left   400 px or 45 ppt
-    bindsym $hft+j resize shrink down   400 px or 45 ppt
-    bindsym $hft+k resize shrink up     400 px or 45 ppt
-    bindsym $hft+l resize shrink right  400 px or 45 ppt
+    bindsym $mod+$hft+Down  resize shrink height 200 px or 20 ppt
+    bindsym $mod+$hft+Left  resize grow   width  200 px or 20 ppt
+    bindsym $mod+$hft+Right resize shrink width  200 px or 20 ppt
+    bindsym $mod+$hft+Up    resize grow   height 200 px or 20 ppt
 
-    bindsym r resize set           640 px 480 px
-    bindsym s resize set           640 px 640 px
+    bindsym           r     resize set           640 px   480 px
+    bindsym      $hft+r     resize set          1024 px   768 px
 
-    bindsym 5 resize grow   height 640 px or 50 ppt
-    bindsym 2 resize grow   width  640 px or 50 ppt
+    bindsym           s     resize set           640 px   640 px
+    bindsym      $hft+s     resize set          1024 px  1024 px
 
     bindsym Escape mode command
     bindsym Return mode default
