zsh install makefile correction

--- a/zsh.d/Makefile
+++ b/zsh.d/Makefile
@@ -6,14 +6,12 @@ endif
 INSTALL_DATA = $(INSTALL) -m 755
 RUNCOMS != ls *.zsh
 RC:=$(basename $(RUNCOMS))
-LIVE := $(addprefix $(ZDOTDIR)/.,$(RC))
 ifndef ZDOTDIR
 ZDOTDIR = $(HOME)/.zconf/
 endif
-
+LIVE := $(addprefix $(ZDOTDIR).,$(RC))
 
 .SUFFIXES:
-.SUFFIXES: .zsh
 
 .PHONY: install zshenv zdotdir
 
@@ -23,12 +21,14 @@ zshenv: $(HOME)/.zshenv
 
 zdotdir: $(ZDOTDIR)/.zprezto
 
+$(LIVE):  $(ZDOTDIR).%: %.zsh
+	$(INSTALL_DATA) $*.zsh $@
 
-$(LIVE): $(ZDOTDIR)/.% : %.zsh
-	$(INSTALL_DATA) $? $@
-
-$(HOME)/.zshenv: $(CURDIR)/zshenv
+$(HOME)/.zshenv:
 	$(INSTALL_DATA) $< $@
 
-$(ZDOTDIR)/.zprezto:
+$(ZDOTDIR)/.zprezto: | $(ZDOTDIR)
 	@git clone -q --recursive $(PREZTO) $(ZDOTDIR)/.zprezto
+
+$(ZDOTDIR):
+	mkdir $(ZDOTDIR)
