git.d in master install

--- a/git.d/Makefile
+++ b/git.d/Makefile
@@ -1,22 +1,16 @@
-ifeq ($(shell uname -s),FreeBSD)
-INSTALL=install -c
-else
-INSTALL=install -T
-endif
-INSTALL_PROGRAM=$(INSTALL) -m 755
-INSTALL_DATA=$(INSTALL) -m 644
 DESTDIR=$(HOME)
 SHELL=zsh
-SOURCES != ls | grep -v Makefile 
-INSTALLED != for file in ${SOURCES}; echo "$(DESTDIR)/.$${file}" 
+SOURCES != ls | grep -v Makefile
+INSTALLED := $(addprefix $(HOME)/.,$(SOURCES))
 
 .PHONY: install
+.SUFFIXES: $(addprefix .,$(SOURCES))
 
-install: $(SOURCES)
-	$(MAKE) $(INSTALLED)
+install: $(INSTALLED)
 
-$(DESTDIR)/.tigrc: tigrc
+$(HOME)/.% : .%
 	$(INSTALL_DATA) $? $@
+	rm -fv $<
 
-$(DESTDIR)/.gitconfig: gitconfig
-	$(INSTALL_DATA) $? $@
+.% :: %
+	cp -rav $< $@
