pythin now createa its user site

--- a/python.d/Makefile
+++ b/python.d/Makefile
@@ -1,14 +1,21 @@
-PIP= pip install --upgrade 
-PIP2= pip2 install --upgrade 
+PIP        = pip install --upgrade
+PIP2      := pip2 install --upgrade
+USERSITE  := $(ZDOTDIR)/python.d/usersite
+VERSIONS   = 3.6 2.7
+USERSITES := $(foreach ver,$(VERSIONS),$(addsuffix /$(ver),$(USERSITE)))
+ZSHRC      = $(ZDOTDIR)/.zshrc
+FILESIGIe  = '/^# AUTO python version/ /^# AUTO / { print $$(VERSIONVAR) } '
+
+.PHONY: install usersites addvar
+
+install:
+
+usersites: $(USERSITES) ;
+
+addvar:
+	cat $(ZSHRC) | awk '$(FILESIGIL) { print "something" } '
 
 
-.PHONY: install pip packages
 
-install: 
-	pkg install python2
-	$(PIP) pip
-	$(PIP2) pip
-	$(PIP) -r requirements.txt
-	$(PIP2) -r requirements2.txt
-	
-
+$(USERSITES):
+	mkdir $@
