correctly creates vars

--- a/python.d/Makefile
+++ b/python.d/Makefile
@@ -5,17 +5,24 @@ VERSIONS   = 3.6 2.7
 USERSITES := $(foreach ver,$(VERSIONS),$(addsuffix /$(ver),$(USERSITE)))
 ZSHRC      = $(ZDOTDIR)/.zshrc
 FILESIGIe  = '/^# AUTO python version/ /^# AUTO / { print $$(VERSIONVAR) } '
+VER =3.6:
 
-.PHONY: install usersites addvar
+.PHONY: install usersites addvar versionlink
 
 install:
 
 usersites: $(USERSITES) ;
 
+versionlink: $(HOME)/bin/python
+
 addvar:
 	cat $(ZSHRC) | awk '$(FILESIGIL) { print "something" } '
 
+$(HOME)/bin/python: .chgversion
+	[[ -s $@ ]] && rm $@
+	ln -s $(PREFIX)/python$(VER) $@
 
+.chgversion: ;
 
 $(USERSITES):
 	mkdir $@
