local changes to be exported

--- a/i3.d/Makefile
+++ b/i3.d/Makefile
@@ -1,4 +1,5 @@
-
+INSTALL = install
+INSTALL_DATA = $(INSTALL) -m 644
 I3CONFIG_DIR = $(HOME)/.config/i3
 I3CONFIG     = $(I3CONFIG_DIR)/config
 I3STATUS_DIR = $(HOME)/.config/i3status
