x11 and i3 config update

--- a/i3.d/i3.config
+++ b/i3.d/i3.config
@@ -14,7 +14,7 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 #Global
-# Modifiers 
+# Modifiers
 set $mod Mod4
 set $hft Shift
 set $ctl Control
@@ -62,8 +62,8 @@ for_window [class="Google-chrome"]                  border none
 for_window [class="MotionPro"]     floating enable
 for_window [class="Shotwell"]                       border none
 for_window [class="^.creenkey"]    floating enable
-for_window [class="^URxvt"]                         border pixel  $BORDER_FAT 
-for_window [class="^UXTerm"]                        border pixel  $BORDER_FAT 
+for_window [class="^URxvt"]                         border pixel  $BORDER_FAT
+for_window [class="^UXTerm"]                        border pixel  $BORDER_FAT
 for_window [class="^Xkb"]          floating enable
 for_window [class="^Xkbv"]         floating enable, border none                 , resize set 148 20  , move position 660 0
 for_window [class="^Xmag"]         floating enable, border normal $BORDER_FAT   , resize set 400 400 , move position 635 32
@@ -71,7 +71,7 @@ for_window [title="^xzoom"]        floating enable, border pixel  $BORDER_FAT   
 for_window [class="^feh"]          floating enable, border pixel  $BORDER_FAT   , resize set 638 465 , move position 635 32
 for_window [class="^vlc$"]         floating enable, border pixel  $BORDER_SKINNY, resize set s40 480 , move absolute 0, 0
 for_window [class="^xterm"]                         border pixel  $BORDER_FAT
-for_window [class="rofi"]                           border pixel
+for_window [class="rofi"]                           border pixel  $BORDER_FAT
 for_window [title="^Event Tester"] floating enable
 for_window [title="^xfontsel"]     floating enable
 for_window [window_role="pop-up"]  floating enable, border pixel $BORDER_SKINNY
@@ -136,7 +136,7 @@ bindsym $mod+     Tab    workspace  next
 bindsym $mod+$hft+Tab    workspace  prev
 
 bindsym $mod+     Return fullscreen toggle
-bindsym $mod+     Return fullscreen toggle
+bindsym $mod+     Escape fullscreen toggle
 #}
 
 # shifted modes
@@ -188,7 +188,7 @@ mode command {
 
 #     bindsym Escape mode default
 #     bindsym Return mode default
-# } 
+# }
 
 mode config {
     bindsym b      exec     $BARCONFIGV , mode default
@@ -225,15 +225,15 @@ mode border {
     bindsym      Tab move container to workspace next , mode default
     bindsym $hft+Tab move container to workspace prev , mode default
 
-    bindsym      1   move container to workspace 1    , mode default
-    bindsym      2   move container to workspace 2    , mode default
-    bindsym      3   move container to workspace 3    , mode default
-    bindsym      4   move container to workspace 4    , mode default
-    bindsym      5   move container to workspace 5    , mode default
-    bindsym      6   move container to workspace 6    , mode default
-    bindsym      7   move container to workspace 7    , mode default
-    bindsym      8   move container to workspace 8    , mode default
-    bindsym      9   move container to workspace 9    , mode default
+    bindsym      1   move container to workspace 1, mode default
+    bindsym      2   move container to workspace 2, mode default
+    bindsym      3   move container to workspace 3, mode default
+    bindsym      4   move container to workspace 4, mode default
+    bindsym      5   move container to workspace 5, mode default
+    bindsym      6   move container to workspace 6, mode default
+    bindsym      7   move container to workspace 7, mode default
+    bindsym      8   move container to workspace 8, mode default
+    bindsym      9   move container to workspace 9, mode default
 
     bindsym Up       focus up
     bindsym Down     focus down
