--- a/git.d/Makefile
+++ b/git.d/Makefile
@@ -2,15 +2,18 @@ DESTDIR=$(HOME)
 SHELL=zsh
 SOURCES != ls | grep -v Makefile
 INSTALLED := $(addprefix $(HOME)/.,$(SOURCES))
+INSTALL_DATA = install -m 644
 
 .PHONY: install
 .SUFFIXES: $(addprefix .,$(SOURCES))
 
 install: $(INSTALLED)
 
-$(HOME)/.% : .%
-	$(INSTALL_DATA) $? $@
-	rm -fv $<
+$(HOME)/.tigrc: tigrc
+	$(INSTALL_DATA) $< $@
 
-.% :: %
-	cp -rav $< $@
+$(HOME)/.gitconfig: gitconfig
+	$(INSTALL_DATA) $< $@
+
+$(HOME)/.git-flow.tigrc: git-flow.tigrc
+	$(INSTALL_DATA) $< $@
