--- a/zsh.d/Makefile
+++ b/zsh.d/Makefile
@@ -1,15 +1,16 @@
-ifeq ($(shell uname -s), FreeBSD)
-INSTALL = install -c
+ifdef FREEBSD
+INSTALL         = install -c
 else
-INSTALL = install -T
+INSTALL         = install -T
 endif
-INSTALL_DATA = $(INSTALL) -m 664
-RUNCOMS != ls *.zsh
-RC:=$(basename $(RUNCOMS))
+INSTALL_DATA    = $(INSTALL) -m 664
+RUNCOMS        != ls *.zsh
+RC             := $(basename $(RUNCOMS))
 ifndef ZDOTDIR
-ZDOTDIR = $(HOME)/.zconf/
+ZDOTDIR         = $(HOME)/.zconf/
 endif
-LIVE := $(addprefix $(ZDOTDIR)/.,$(RC))
+LIVE           := $(addprefix $(ZDOTDIR)/.,$(RC))
+DOCKERSRC       = https://raw.githubusercontent.com/docker/cli/master/contrib/completion/zsh/_docker
 
 .SUFFIXES:
 
@@ -29,6 +30,7 @@ $(LIVE):  $(ZDOTDIR)/.%: %.zsh
 
 $(ZDOTDIR)/.zprezto: | $(ZDOTDIR)
 	@git clone -q --recursive $(PREZTO) $(ZDOTDIR)/.zprezto
+	curl -fLo $(ZDOTDIR)/.zprezto/modules/completion/external/src/_docker $(DOCKERSRC)
 
 $(ZDOTDIR):
 	mkdir $(ZDOTDIR)
