--- a/etal.d/git.d/Makefile
+++ b/etal.d/git.d/Makefile
@@ -1,19 +1,13 @@
-DESTDIR=$(HOME)
-SHELL=zsh
-SOURCES != ls | grep -v Makefile
-INSTALLED := $(addprefix $(HOME)/.,$(SOURCES))
-INSTALL_DATA = install -m 644
+
+SHELL         = zsh
+SOURCES      != ls *g*
+INSTALLED    := $(addprefix $(HOME)/.,$(SOURCES))
+INSTALL_DATA  = install -m 644
 
 .PHONY: install
 .SUFFIXES: $(addprefix .,$(SOURCES))
 
 install: $(INSTALLED)
 
-$(HOME)/.tigrc: tigrc
-	$(INSTALL_DATA) $< $@
-
-$(HOME)/.gitconfig: gitconfig
-	$(INSTALL_DATA) $< $@
-
-$(HOME)/.git-flow.tigrc: git-flow.tigrc
+$(INSTALLED): $(HOME)/.% : %
 	$(INSTALL_DATA) $< $@
