--- a/zsh.d/Makefile
+++ b/zsh.d/Makefile
@@ -7,30 +7,28 @@ INSTALL_DATA    = $(INSTALL) -m 664
 RUNCOMS        != ls *.zsh
 RC             := $(basename $(RUNCOMS))
 ifndef ZDOTDIR
-ZDOTDIR         = $(HOME)/.zconf/
+ZDOTDIR         = $(HOME)/.zconf
 endif
-LIVE           := $(addprefix $(ZDOTDIR)/.,$(RC))
+DOTRUNCOMS           := $(addprefix $(ZDOTDIR)/.,$(RC))
 DOCKERSRC       = https://raw.githubusercontent.com/docker/cli/master/contrib/completion/zsh/_docker
 
 .SUFFIXES:
 
-.PHONY: install hzshenv zdotdir
+.PHONY: install zshenv zdotdir
 
-install: zshenv zdotdir $(LIVE)
-
-hzshenv: ~/.zshenv
-
-zdotdir: $(ZDOTDIR)/.zprezto
-
-$(LIVE):  $(ZDOTDIR)/.%: %.zsh
-	$(INSTALL_DATA) $*.zsh $@
+install: zshenv zdotdir $(DOTRUNCOMS)
 
 ~/.zshenv: zshenv
 	$(INSTALL_DATA) $< $@
+
+zdotdir: $(ZDOTDIR)/.zprezto
+
+$(DOTRUNCOMS):  $(ZDOTDIR)/.%: %.zsh
+	$(INSTALL_DATA) $*.zsh $@
 
 $(ZDOTDIR)/.zprezto: | $(ZDOTDIR)
 	@git clone -q --recursive $(PREZTO) $(ZDOTDIR)/.zprezto
 	curl -fLo $(ZDOTDIR)/.zprezto/modules/completion/external/src/_docker $(DOCKERSRC)
 
 $(ZDOTDIR):
-	mkdir $(ZDOTDIR)
+	mkdir -p $(ZDOTDIR)
