|Descr                                      | Closes     |   commit  | |:----------------                          |:----------:|:---------:| |stray                                      |            | 460d02b6  | |zsh install corrected                      |   #2       | 77c8e7fe  | |updated bootstrap for debian               |            | 27ca20bb  | |cascading makes now work,                  |   #4       | c30601d7  | |git, flawless                              | #5         | a35b0982  | |Ranger, flawless                           |            | 12acad18  | |final resting place for gcloud sdk         |            | d6b0b6f6  | |VNC install flawless                       |  #4        | bee1350d  | |removed changelog and packages             |  #4        | 350e7b27  | |re arranged x11.d to include i3.d          |  #4        |           | |and vnc.d plus Xres                        |            | 84a344a1  | |Added docker completion                    |            | 1d71df8b  | |git.d installs                             |   #6       | 6708c424  | |curl pipe shell install test               |            | 31496c5e  | |experiment with docker                     |    #3      | 33136d4e  |

--- a/zsh.d/Makefile
+++ b/zsh.d/Makefile
@@ -1,34 +1,34 @@
-ifeq ($(shell uname -s), FreeBSD)
-INSTALL = install -c
+ifdef FREEBSD
+INSTALL         = install -c
 else
-INSTALL = install -T
+INSTALL         = install -T
 endif
-INSTALL_DATA = $(INSTALL) -m 664
-RUNCOMS != ls *.zsh
-RC:=$(basename $(RUNCOMS))
+INSTALL_DATA    = $(INSTALL) -m 664
+RUNCOMS        != ls *.zsh
+RC             := $(basename $(RUNCOMS))
 ifndef ZDOTDIR
-ZDOTDIR = $(HOME)/.zconf/
+ZDOTDIR         = $(HOME)/.zconf
 endif
-LIVE := $(addprefix $(ZDOTDIR)/.,$(RC))
+DOTRUNCOMS           := $(addprefix $(ZDOTDIR)/.,$(RC))
+DOCKERSRC       = https://raw.githubusercontent.com/docker/cli/master/contrib/completion/zsh/_docker
 
 .SUFFIXES:
 
-.PHONY: install hzshenv zdotdir
+.PHONY: install zshenv zdotdir
 
-install: zshenv zdotdir $(LIVE)
-
-hzshenv: ~/.zshenv
-
-zdotdir: $(ZDOTDIR)/.zprezto
-
-$(LIVE):  $(ZDOTDIR)/.%: %.zsh
-	$(INSTALL_DATA) $*.zsh $@
+install: zshenv zdotdir $(DOTRUNCOMS)
 
 ~/.zshenv: zshenv
 	$(INSTALL_DATA) $< $@
 
+zdotdir: $(ZDOTDIR)/.zprezto
+
+$(DOTRUNCOMS):  $(ZDOTDIR)/.%: %.zsh
+	$(INSTALL_DATA) $*.zsh $@
+
 $(ZDOTDIR)/.zprezto: | $(ZDOTDIR)
 	@git clone -q --recursive $(PREZTO) $(ZDOTDIR)/.zprezto
+	curl -fLo $(ZDOTDIR)/.zprezto/modules/completion/external/src/_docker $(DOCKERSRC)
 
 $(ZDOTDIR):
-	mkdir $(ZDOTDIR)
+	mkdir -p $(ZDOTDIR)
